@@ -10,7 +10,8 @@ Added ad conversion tracking (#60)
 Added ad click tracking (#59)
 Added initial localStorage support for intermittent offline beacons (#24)
 Added new trackAdImpression, mapping to unstructured event (#13)
-Removed references to referral cookie (#118) 
+Removed references to referral cookie (#118)
+Implement enableLinkTracking support (#51) (TODO)
 
 Version 1.0.0 (2014-02-XX)
 --------------------------
